--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="containter">
+  <div class="container">
     <svg class="logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="36px" height="36px" viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve">
       <path d="M36,26c0,5.52-4.48,10-10,10H10c-1.1,0-2-0.9-2-2s0.9-2,2-2h16c3.31,0,6-2.69,6-6s-2.69-6-6-6H10c-1.1,0-2-0.9-2-2
         c0-1.1,0.9-2,2-2h16c3.31,0,6-2.69,6-6s-2.69-6-6-6H10C8.9,4,8,3.1,8,2s0.9-2,2-2h16c5.52,0,10,4.48,10,10c0,3.27-1.58,6.18-4.01,8
