--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <path d="M28,26c0,1.1-0.9,2-2,2H10C4.48,28,0,23.52,0,18C0,12.48,4.48,8,10,8h16c1.1,0,2,0.9,2,2s-0.9,2-2,2H10c-3.31,0-6,2.69-6,6
         c0,3.31,2.69,6,6,6h16C27.1,24,28,24.9,28,26z"></path>
     </svg>
-    <h1>
+    <p class="bio">
       I'm Cole Bemis, a Web/UI Designer and Front-end Developer based in Portland, Oregon.
-    </h1>
-    <ul>
+    </p>
+    <ul class="links">
       <li><a href="http://twitter.com/colebemis" target="_blank">Twitter</a></li>
       <li><a href="http://dribbble.com/colebemis" target="_blank">Dribbble</a></li>
       <li><a href="http://github.com/colebemis" target="_blank">GitHub</a></li>
