--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 </head>
 <body>
   <div class="container">
-    <svg class="logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="36px" height="36px" viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve">
-      <path d="M36,26c0,5.52-4.48,10-10,10H10c-1.1,0-2-0.9-2-2s0.9-2,2-2h16c3.31,0,6-2.69,6-6s-2.69-6-6-6H10c-1.1,0-2-0.9-2-2
-        c0-1.1,0.9-2,2-2h16c3.31,0,6-2.69,6-6s-2.69-6-6-6H10C8.9,4,8,3.1,8,2s0.9-2,2-2h16c5.52,0,10,4.48,10,10c0,3.27-1.58,6.18-4.01,8
-        C34.42,19.82,36,22.73,36,26z"></path>
-      <path d="M28,26c0,1.1-0.9,2-2,2H10C4.48,28,0,23.52,0,18C0,12.48,4.48,8,10,8h16c1.1,0,2,0.9,2,2s-0.9,2-2,2H10c-3.31,0-6,2.69-6,6
+    <h1 class="logo">
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="36px" height="36px" viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve">
+        <path d="M36,26c0,5.52-4.48,10-10,10H10c-1.1,0-2-0.9-2-2s0.9-2,2-2h16c3.31,0,6-2.69,6-6s-2.69-6-6-6H10c-1.1,0-2-0.9-2-2
+          c0-1.1,0.9-2,2-2h16c3.31,0,6-2.69,6-6s-2.69-6-6-6H10C8.9,4,8,3.1,8,2s0.9-2,2-2h16c5.52,0,10,4.48,10,10c0,3.27-1.58,6.18-4.01,8
+          C34.42,19.82,36,22.73,36,26z"></path>
+        <path d="M28,26c0,1.1-0.9,2-2,2H10C4.48,28,0,23.52,0,18C0,12.48,4.48,8,10,8h16c1.1,0,2,0.9,2,2s-0.9,2-2,2H10c-3.31,0-6,2.69-6,6
         c0,3.31,2.69,6,6,6h16C27.1,24,28,24.9,28,26z"></path>
-    </svg>
+      </svg>
+    </h1>
+
     <p class="bio">
-      I'm Cole Bemis, a Web/UI Designer and Front-end Developer based in Portland, Oregon.
+      I'm Cole Bemis, a UX/UI Designer and Front-end Developer based in Portland, Oregon.
     </p>
     <ul class="links">
       <li><a href="http://twitter.com/colebemis" target="_blank">Twitter</a></li>
