--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title></title>
+  <title>Cole Bemis</title>
+  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-  <div class="grid-container">
+  <div class="container">
     <div class="logo">
       {% include_relative colebemis-logo.svg %}
     </div>
     <div class="about">
       <h1 class="about-heading">
-        Hello, I&rsquo;m Cole Bemis.<br>
-        Frontend developer, designer,<br>
-        lifelong learner, dog lover.
+        Hello, I&rsquo;m Cole Bemis. Frontend developer, designer, lifelong learner, dog lover.
       </h1>
       <p class="about-body">
         Studying computer science at <a class="about-link" href="https://csc.calpoly.edu" target="_blank">Cal Poly</a>.
