--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cole Bemis</title>
+  <meta property="og:title" content="Cole Bemis">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Frontend developer, designer, lifelong learner, dog lover.">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@colebemis"
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
 </head>
