--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
   <meta property="og:description" content="Frontend developer, designer, lifelong learner, dog lover.">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@colebemis"
+  <meta name="twitter:site" content="@colebemis">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
 </head>
