--- a/index.html
+++ b/index.html
@@ -1,51 +1,70 @@
 ---
+title: Cole Bemis
+links:
+- name: Twitter
+  url: http://twitter.com/colebemis
+- name: GitHub
+  url: http://github.com/colebemis
+- name: Dribbble
+  url: http://dribbble.com/colebemis
+- name: LinkedIn
+  url: http://linkedin.com/in/colebemis
+- name: Email
+  url: mailto:cole@colebemis.com
 ---
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cole Bemis</title>
-  <meta property="og:title" content="Cole Bemis">
+
+  <title>{{ page.title }}</title>
+
+  <meta property="og:title" content="{{ page.title }}">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Frontend developer, designer, lifelong learner, dog lover.">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@colebemis">
+
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-  <link href="styles.css" rel="stylesheet">
+  <link href="https://unpkg.com/tachyons/css/tachyons.min.css" rel="stylesheet">
+  <style>
+    .rubik {
+      font-family: "Rubik", sans-serif;
+    }
+  </style>
 </head>
-<body>
-  <div class="container">
-    <div class="logo">
-      {% include_relative colebemis-logo.svg %}
+<body class="rubik black-60">
+
+  <div class="flex flex-column w-80 min-vh-100-ns center">
+
+    <div class="pv5 dark-red">
+      <svg viewBox="0 0 36 36" width="36" height="36" fill="currentColor">
+        <title>Cole Bemis Logo</title>
+        <path d="M36,26c0,5.52-4.48,10-10,10H10c-1.1,0-2-0.9-2-2s0.9-2,2-2h16c3.31,0,6-2.69,6-6s-2.69-6-6-6H10c-1.1,0-2-0.9-2-2c0-1.1,0.9-2,2-2h16c3.31,0,6-2.69,6-6s-2.69-6-6-6H10C8.9,4,8,3.1,8,2s0.9-2,2-2h16c5.52,0,10,4.48,10,10c0,3.27-1.58,6.18-4.01,8 C34.42,19.82,36,22.73,36,26z"></path>
+        <path d="M28,26c0,1.1-0.9,2-2,2H10C4.48,28,0,23.52,0,18C0,12.48,4.48,8,10,8h16c1.1,0,2,0.9,2,2s-0.9,2-2,2H10c-3.31,0-6,2.69-6,6c0,3.31,2.69,6,6,6h16C27.1,24,28,24.9,28,26z"></path>
+      </svg>
     </div>
-    <div class="about">
-      <h1 class="about-heading">
+
+    <div class="flex-auto flex flex-column justify-center">
+      <h1 class="mt0 mb4 f3 f2-ns normal lh-copy lh-title-ns measure-narrow black-90">
         Hello, I&rsquo;m Cole Bemis. Frontend developer, designer, lifelong learner, dog lover.
       </h1>
-      <p class="about-body">
-        Studying computer science at <a class="about-link" href="https://csc.calpoly.edu" target="_blank">Cal Poly</a>.
-        Intern at <a class="about-link" href="https://ifixit.com" target="_blank">iFixit</a>.
+      <p class="mv0 f5 f4-ns lh-copy measure">
+        Studying computer science at <a class="link color-inherit hover-dark-red bb" href="https://csc.calpoly.edu" target="_blank">Cal Poly</a>.
+        Intern at <a class="link color-inherit hover-dark-red bb" href="https://ifixit.com" target="_blank">iFixit</a>.
       </p>
     </div>
-    <ul class="social">
-      <li class="social-item">
-        <a class="social-link" href="https://twitter.com/colebemis" target="_blank">Twitter</a>
-      </li>
-      <li class="social-item">
-        <a class="social-link" href="https://github.com/colebemis" target="_blank">GitHub</a>
-      </li>
-      <li class="social-item">
-        <a class="social-link" href="https://dribbble.com/colebemis" target="_blank">Dribbble</a>
-      </li>
-      <li class="social-item">
-        <a class="social-link" href="https://linkedin.com/in/colebemis" target="_blank">LinkedIn</a>
-      </li>
-      <li class="social-item">
-        <a class="social-link" href="mailto:cole@colebemis.com" target="_blank">Email</a>
-      </li>
+
+    <ul class="flex flex-column flex-row-l mv0 pv5 pl0 list f5">
+      {% for link in page.links %}
+        <li class="mr4-l pv3">
+          <a class="link color-inherit hover-dark-red" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
+        </li>
+      {% endfor %}
     </ul>
+
   </div>
+
 </body>
 </html>
