--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 title: Cole Bemis
+description: Frontend developer, designer, lifelong learner, dog lover.
 links:
 - name: Twitter
   url: http://twitter.com/colebemis
@@ -19,10 +20,11 @@ links:
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>{{ page.title }}</title>
+  <meta name="description" content="{{ page.description }}" >
 
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:type" content="website">
-  <meta property="og:description" content="Frontend developer, designer, lifelong learner, dog lover.">
+  <meta property="og:description" content="{{ page.description }}">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@colebemis">
 
