Add open graph image

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ links:
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:type" content="website">
   <meta property="og:description" content="{{ page.description }}">
+  <meta property="og:image" content="colebemis-og.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="300">
+  <meta property="og:image:height" content="300">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@colebemis">
 
