Simplify meta tags

--- a/index.html
+++ b/index.html
@@ -23,14 +23,8 @@ links:
   <meta name="description" content="{{ page.description }}" >
 
   <meta property="og:title" content="{{ page.title }}">
-  <meta property="og:type" content="website">
   <meta property="og:description" content="{{ page.description }}">
-  <meta property="og:image" content="colebemis-og.png">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="600">
-  <meta property="og:image:height" content="600">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@colebemis">
 
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://unpkg.com/tachyons/css/tachyons.min.css" rel="stylesheet">
@@ -54,7 +48,7 @@ links:
 
     <div class="flex-auto flex flex-column justify-center">
       <h1 class="mt0 mb4 f3 f2-ns normal lh-copy lh-title-ns measure-narrow black-90">
-        Hello, I&rsquo;m Cole Bemis. Frontend developer, designer, lifelong learner, dog lover.
+        Hello, I&rsquo;m Cole Bemis. {{ page.description }}
       </h1>
       <p class="mv0 f5 f4-ns lh-copy measure">
         Studying computer science at <a class="link color-inherit hover-dark-red bb" href="https://csc.calpoly.edu" target="_blank">Cal Poly</a>.
