--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ links:
         {% for project in page.projects %}
         <li class="w-100 w-30-l mt4 mt5-ns">
           <a class="dib link black-90 hover-dark-red" href="{{ project.link }}" target="_blank">
-            <h3 class="mt0 mb2 f4 f3-ns normal lh-copy measure-narrow">{{ project.name }}</h3>
+            <h3 class="mt0 mb1 mb2-ns f4 f3-ns normal lh-copy measure-narrow">{{ project.name }}</h3>
             <p class="mv0 lh-copy measure">{{ project.description }}</p>
           </a>
         </li>
