--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ links:
     .rubik {
       font-family: "Rubik", sans-serif;
     }
+
+    .color-animate, .color-animate:hover, .color-animate:focus {
+      transition: color .15s;
+    }
   </style>
 
   {% if site.google_analytics and jekyll.environment == 'production' %}
@@ -67,8 +71,8 @@ links:
         Hello, I&rsquo;m Cole Bemis. {{ page.description }}
       </h1>
       <p class="mv0 f5 f4-ns lh-copy measure">
-        Studying computer science at <a class="link color-inherit bb hover-dark-red" href="https://csc.calpoly.edu" target="_blank">Cal Poly</a>.
-        Intern at <a class="link color-inherit bb hover-dark-red" href="https://ifixit.com" target="_blank">iFixit</a>.
+        Studying computer science at <a class="no-underline color-inherit bb color-animate hover-dark-red" href="https://csc.calpoly.edu" target="_blank">Cal Poly</a>.
+        Intern at <a class="no-underline color-inherit bb color-animate hover-dark-red" href="https://ifixit.com" target="_blank">iFixit</a>.
       </p>
     </div>
 
@@ -77,7 +81,7 @@ links:
       <ul class=" flex flex-wrap justify-between mv0 pl0 list">
         {% for project in page.projects %}
         <li class="w-100 w-30-l mt4 mt5-ns">
-          <a class="dib link black-90 hover-dark-red" href="{{ project.link }}" target="_blank">
+          <a class="dib no-underline black-90 color-animate hover-dark-red" href="{{ project.link }}" target="_blank">
             <h3 class="mt0 mb1 mb2-ns f4 f3-ns normal lh-copy measure-narrow">{{ project.name }}</h3>
             <p class="mv0 lh-copy measure">{{ project.description }}</p>
           </a>
@@ -89,7 +93,7 @@ links:
     <ul class="flex flex-column flex-row-l mv0 pv4 pv5-ns pl0 list f5">
       {% for link in page.links %}
       <li class="mr4-l pv3">
-        <a class="link color-inherit hover-dark-red" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
+        <a class="no-underline color-inherit color-animate hover-dark-red" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
       </li>
       {% endfor %}
     </ul>
