--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ links:
     </div>
 
     <div class="flex-auto flex flex-column justify-center pv4 pv5-ns">
-      <h1 class="mt0 mb4 f3 f2-ns normal lh-copy lh-title-ns measure-narrow black-90">
+      <h1 class="mt0 mb4 f3 f2-m f1-l normal lh-copy lh-title-ns measure-narrow black-90">
         Hello, I&rsquo;m Cole Bemis. {{ page.description }}
       </h1>
       <p class="mv0 f5 f4-ns lh-copy measure">
