Update feather link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: Frontend developer, designer, lifelong learner, dog lover.
 projects:
 - name: Feather
   description: Simply beautiful open source icons
-  link: http://colebemis.com/feather
+  link: https://feather.netlify.com
 - name: Tabio
   description: Effortless tab management for Chrome
   link: http://colebemis.com/tabio
