Remove target="_blank"

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ description: Frontend developer, designer, lifelong learner, dog lover.
       Hello, I&rsquo;m Cole Bemis. {{ page.description }}
     </h1>
     <p class="mv0 f5 f4-ns lh-copy measure">
-      Studying computer science at <a class="pb1-ns no-underline color-inherit bb color-animate hover-dark-red" href="https://csc.calpoly.edu" target="_blank">Cal Poly</a>.
-      Intern at <a class="pb1-ns no-underline color-inherit bb color-animate hover-dark-red" href="https://ifixit.com" target="_blank">iFixit</a>.
+      Studying computer science at <a class="pb1-ns no-underline color-inherit bb color-animate hover-dark-red" href="https://csc.calpoly.edu">Cal Poly</a>.
+      Intern at <a class="pb1-ns no-underline color-inherit bb color-animate hover-dark-red" href="https://ifixit.com">iFixit</a>.
     </p>
   </div>
 
