Add Open Graph and Twitter meta tags for improved social sharing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.png" type="image/png" sizes="32x32">
   <title>Cole Bemis</title>
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://colebemis.com/">
+  <meta property="og:title" content="Cole Bemis">
+  <meta property="og:description" content="Building things for people who build things. Staff Research Engineer at GitHub Next.">
+  <meta property="og:image" content="https://colebemis.com/colebemis.jpg">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:url" content="https://colebemis.com/">
+  <meta name="twitter:title" content="Cole Bemis">
+  <meta name="twitter:description" content="Building things for people who build things. Staff Research Engineer at GitHub Next.">
+  <meta name="twitter:image" content="https://colebemis.com/colebemis.jpg">
+  <meta name="twitter:creator" content="@colebemis">
+
   <style>
     body {
       font-family: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
