--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <img src="/colebemis.jpg" alt="Cole Bemis">
     <h1>Hi, I&rsquo;m Cole.</h1>
     <p>I build things for people who build things.</p>
-    <p>I&rsquo;m currently exploring tools for thought and AI interfaces as a Design Engineer at <a href="https://notion.so">Notion</a> in San Francisco.</p>
+    <p>I&rsquo;m currently a Design Engineer at <a href="https://notion.so">Notion</a> in San Francisco.</p>
     <p>Previously, I was a Staff Research Engineer on a small R&D team within <a href="https://github.com">GitHub</a> called <a href="https://githubnext.com">GitHub Next</a>. I also worked on GitHub&rsquo;s design system, <a href="https://primer.style">Primer</a>.</p>
     <p>On the side, I&rsquo;m building a note-taking app called <a href="https://uselumen.com">Lumen</a>. I also created <a href="https://feathericons.com">Feather Icons</a>, a popular open-source icon library.</p>
     <p>You can find me online on <a href="https://twitter.com/colebemis">Twitter</a> and <a href="https://github.com/colebemis">GitHub</a>.</p>
